<resources>
    <string name="app_name">ClickBot</string>
    <string name="start">Start</string>
    <string name="start_floating_widget">Start Floating Widget</string>
    <string name="accessibility_service_description">\nAccessibility Service</string>
    <string name="accessibility_service_label">Accessibility Service Label</string>
    <string name="masukkan_harga">Masukkan Harga</string>
    <string name="masukkan_jarak">Masukkan Jarak</string>
    <string name="submit">Submit</string>
    <string name="autobid_courier">Autobid (kurir)</string>
    <string name="autotime">Autotime</string>
    <string name="max_distance">Max.Jarak</string>
    <string name="max_price">Max.Harga</string>
    <string name="min_price">Min.Harga</string>
    <string name="autorefresh">Autorefresh</string>

    <string name="image_contentDescription">image</string>
    <string name="let_s_get_started_text">Let\'s Get Started</string>
    <string name="intro_text_description">Collaborate and Plan Together Across Multiple Devices on Project Manager Minimalist Interface.</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>

    <string name="sign_up_description_text">Enter your name, email id and password</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in_description_text">Enter your email and password</string>

    <string name="please_click_back_again_to_exit">Please click back again to exit</string>
    <string name="please_wait">Please Wait&#8230;</string>

    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>

    <string name="mobile">Mobile</string>
    <string name="update">Update</string>
    <string name="my_profile_title">My Profile</string>

    <string name="create_board_title">Create Board</string>
    <string name="create">Create</string>
    <string name="board_name">Board Name</string>

    <string name="no_boards_are_available">No Boards are available!</string>

    <string name="action_add_list">Add List</string>
    <string name="hint_list_name">List Name</string>
    <string name="action_add_card">Add Card</string>
    <string name="hint_card_name">Card Name</string>
    <string name="add_list">Add List</string>

    <string name="members">Members</string>
</resources>