<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/item_member_content_padding">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_member_image"
            android:layout_width="@dimen/item_member_image_size"
            android:layout_height="@dimen/item_member_image_size"
            android:contentDescription="@string/image_contentDescription"
            android:src="@drawable/ic_user_place_holder"
            app:civ_border_color="@color/primary_text_color"
            app:civ_border_width="@dimen/item_member_image_circular_width_size" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/item_member_detail_layout_marginStart"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_member_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/item_member_name_text_size"
                tools:text="Member Name" />

            <TextView
                android:id="@+id/tv_member_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/secondary_text_color"
                android:textSize="@dimen/item_member_email_text_size"
                tools:text="Email" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_member_divider_height"
        android:layout_marginTop="@dimen/item_member_divider_marginTop"
        android:background="@color/divider_color" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:elevation="10dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:gravity="start|center_vertical"
                android:orientation="vertical"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:text="@string/autorefresh"
                            android:textSize="18sp" />

                        <android.widget.Switch
                            android:id="@+id/switch_auto_refresh"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/seek_bar_auto_refresh_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:text="0 ms"
                        android:textSize="14sp" />

                    <SeekBar
                        android:id="@+id/seek_bar_auto_refresh"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:max="60"
                        android:progress="0" />
                </LinearLayout>

<!--                <LinearLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginTop="24dp"-->
<!--                    android:orientation="vertical">-->

<!--                    <LinearLayout-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:gravity="center_vertical"-->
<!--                        android:orientation="horizontal">-->

<!--                        <TextView-->
<!--                            android:layout_width="0dp"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:layout_weight="1"-->
<!--                            android:gravity="start"-->
<!--                            android:text="@string/autotime"-->
<!--                            android:textSize="18sp" />-->

<!--                        <android.widget.Switch-->
<!--                            android:id="@+id/switch_auto_time"-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content" />-->

<!--                    </LinearLayout>-->

<!--                    <TextView-->
<!--                        android:id="@+id/seek_bar_harga_value"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_gravity="center"-->
<!--                        android:layout_marginTop="8dp"-->
<!--                        android:text="0 minute"-->
<!--                        android:textSize="14sp" />-->

<!--                    <SeekBar-->
<!--                        android:id="@+id/seek_bar_harga"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_marginTop="14dp"-->
<!--                        android:max="60"-->
<!--                        android:progress="0" />-->
<!--                </LinearLayout>-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:text="@string/autobid_courier"
                            android:textSize="18sp" />

                        <android.widget.Switch
                            android:id="@+id/switch_auto_bid"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_weight="1">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/et_min_price"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:hint="@string/min_price"
                                android:inputType="numberDecimal"
                                android:padding="8dp"
                                android:textSize="14sp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_weight="1">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/et_max_price"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:hint="@string/max_price"
                                android:inputType="numberDecimal"
                                android:padding="8dp"
                                android:textSize="14sp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/et_max_distance"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:hint="@string/max_distance"
                                android:inputType="numberDecimal"
                                android:padding="8dp"
                                android:textSize="14sp" />
                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/startButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/shape_button_rounded"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/start"
                    android:textColor="@android:color/white"
                    android:textSize="19sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>